fix: align items in main content for better layout consistency

--- a/gui/src/app/app.component.scss
+++ b/gui/src/app/app.component.scss
@@ -21,6 +21,7 @@
 
     .main-content {
         display: flex;
+        align-items: center;
         flex-direction: column;
         padding: styles.$gap-large;
         gap: styles.$gap-large;
